# toytree

./: .gitignore  .travis.yml  404.html  LICENSE.txt  README.md  README.rst  TODO.txt  build-instructions.md  constraints.txt  environment.yml  index.html  index.ipynb  mkdocs.yml  pyproject.toml  reorg-plan.md  requirements.txt  setup.cfg  setup.py  sitemap.xml  travis.yml  versioner.py
.github/workflows/: demo.yml  mkdocs.yml  pypi-publish.yml  tag-to-release.yml
FAQs/: index.html
annotate-intro/: index.html
barplot/: index.html
binder/: environment.yml  requirements.txt
bipartitions/: index.html
change_log/: index.html
citation/: index.html
cli-pipelines/: index.html
color-mapping/: index.html
command-line/: index.html
conda-recipe/: README.txt
conda-recipe/colormath/: build.sh  meta.yaml
conda-recipe/custom_inherit/: meta.yaml
consensus-trees/: index.html
consensus2/: index.html
contribute/: index.html
core/: index.html
css/: notebook-overrides.css
data/: index.html
debug-canvas/: index.html
docs/: 1-ethos.rst  2-try-it.rst  3-installation.rst  4-tutorial.ipynb  5-toytrees.ipynb  6-treenodes.ipynb  7-multitrees.ipynb  8-styling.ipynb  9-networks.ipynb  Cookbook.ipynb  EdgeStyleDicts.ipynb  FAQs.md  NodeLabels.ipynb  README.md  README_figure.html  _javascript.ipynb  annotate-intro.ipynb  barplot.ipynb  bipartitions.ipynb  change_log.md  citation.md  cli-pipelines.md  cloud-trees.ipynb  color-mapping.ipynb  color-mapping.md  command-line.md  consensus-trees.ipynb  consensus2.ipynb  contribute.md  core.md  data.ipynb  debug-canvas.md  docs-drafts.ipynb  draw-options.ipynb  drawing-basics.ipynb  drawing-cloud-trees-bkp.ipynb  drawing-cloud-trees.ipynb  drawing-coordinates.ipynb  drawing-tree-grids.ipynb  gallery.md  (+65 more)
docs-drafts/: index.html
draw-options/: index.html
drawing-basics/: index.html
drawing-cloud-trees/: index.html
drawing-cloud-trees-bkp/: index.html
drawing-coordinates/: index.html
drawing-tree-grids/: index.html
gallery/: index.html
gentime-figure-1/: index.html
gentime-ne/: index.html
heatmap/: index.html
highlights/: index.html
infer-consensus/: index.html
infer-neighbor-joining/: index.html
infer-parsimony/: index.html
infer-upgma/: index.html
installation/: index.html
make-ultrametric/: index.html
manuscript/: ecol_let.bst  revision.bib  revision.tex
mod-edges/: index.html
mod-topology/: index.html
multitree/: index.html
network_draw/: index.html
network_parse/: index.html
node/: index.html
node-distance/: index.html
old_docs/: 1-ethos.rst  10-treestyles.ipynb  2-try-it.rst  3-installation.rst  4-tutorial.ipynb  5-toytrees.ipynb  6-treenodes.ipynb  7-multitrees.ipynb  8-styling.ipynb  9-networks.ipynb  Cookbook.ipynb  NodeLabels.ipynb  TipLabels.ipynb  build.sh  conf.py  index.rst  requirements.txt
parse_trees/: index.html
pcm-ancestral-state-reconstruction/: index.html
pcm-asr-discrete-ctmc/: index.html
pcm-fit-continuous/: index.html
pcm-fit-discrete/: index.html
pcm-sim_continuous_bm/: index.html
pcm-simulate-discrete/: index.html
pcm-simulate-traits/: index.html
pgls/: index.html
phylogenetic_signal/: index.html
quadripartitions/: index.html
quartets/: index.html
query/: index.html
quick_guide/: index.html
random-trees/: index.html
range-mapping/: index.html
rendering/: index.html
ridge-plot/: index.html
rooting/: index.html
sandbox/: 26-highlight-clades.ipynb  30-add_prune_function.ipynb  32-add_sister_treenodes.ipynb  39-randomtrees-randomnames.ipynb  42-custom-inner-node-labels.ipynb  Minimize.ipynb  Node-age-error-bars.ipynb  PIC-ASR.ipynb  RAD-windows-2.ipynb  SVG-PDF-render-check.ipynb  SVG-animation-ideas.ipynb  ancient.ipynb  distance_nb1-distance-testing.ipynb  distance_nb2-rf-new-function.ipynb  get-vals-nan.ipynb  iqtree-gcf-scf-values.ipynb  parse-networks.ipynb  quartet-funcs-2.ipynb  quartet-funcs.ipynb  radial-coords-demo.ipynb  speciation.ipynb  speedhacks.ipynb  unroot-dist.ipynb
scratch/: index.html
search/: search_index.json
sim-discrete/: index.html
sim_continuous_bm/: index.html
spacing/: index.html
test/: index.html
tests/: conftest.py
tmp/: tree-plot.html
toytree/: Admixture.py  CanvasSetup.py  Container.py  Coords.py  Drawing.py  MultiDrawing.py  Multitree.py  NodeAssist.py  PCM.py  Randomtree.py  Render.py  RobinsonFoulds.py  Rooter.py  SeqGen.py  Style.py  StyleChecker.py  Test.py  Toytree.py  Tree.py  TreeNode.py  TreeParser.py  TreeStyle.py  TreeWriter.py  Treemod.py  __init__.py  _junk.py  ete3mini.py  etemini.py  html.py  html2.py  index.html  junk.py  multitree.py  newick.py  render.py  style.py  toytree.py  tree.py  utils.py
toytree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
traversal/: index.html
tree-annotations/: index.html
tree-distance/: index.html
tree-styles/: index.html
try-it-now/: index.html
vcv/: index.html
write_trees/: index.html
(+741 files in other folders)
