[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "toytree"
dynamic = ["version"]
description = "tree manipulation, plotting, and evolutionary analysis library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Deren Eaton", email = "de2356@columbia.edu" }]
keywords = [
    "phylogeny",
    "tree",
    "network",
    "plotting",
    "toyplot",
    "svg",
    "html",
    "genealogy",
    "coalescent",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "toyplot>=2.1.0",
    "loguru",
    "requests",
    "statsmodels",
]

[project.urls]
Homepage = "https://eaton-lab.org/toytree"

[project.scripts]
toytree = "toytree.cli.main:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]
test = [
    "pytest",
    "pytest-cov",
]
external = [
    "ipcoal",
]

[tool.setuptools]
include-package-data = true
zip-safe = true
license-files = ["LICENSE.txt"]

[tool.setuptools.dynamic]
version = { attr = "toytree.__version__" }

[tool.setuptools.packages.find]
include = ["toytree*"]

[tool.ruff]
# Target Python version
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (F), Autopep8 (E, W), and Isort (I)
select = ["F", "E", "W", "I", "D"]
# D: Enables pydocstyle to enforce documentation rules
ignore = ["D100", "D104"] # Ignore missing docstrings in public modules/packages if preferred

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
# Use Black-style formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning:jupyter_client.*",
    "ignore::DeprecationWarning:reportlab.*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring optional external tools/deps",
]

[tool.coverage.run]
source = ["toytree"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["tests/*"]
