#######################################################################
# CONFIGURATION FILE
# This is the preferred file format in place of older setup.py
#
# Examples
# --------
# Install toytree with:
#     >>> conda install toytree -c conda-forge
# Or, for developers, install dependencies and then toytree w/ pip local:
#     >>> git clone https://github.com/eaton-lab/toytree
#     >>> cd toytree/
#     >>> conda env create -f environment.yml
#     >>> pip install -e . --no-deps
#######################################################################

[metadata]
name = toytree
version = attr: toytree.__version__
author = Deren Eaton
author_email = de2356@columbia.edu
url = https://eaton-lab.org/toytree
description = tree manipulation, plotting, and evolutionary analysis library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = phylogeny, tree, network, plotting, toyplot, SVG, HTML, Genealogy, Coalescent
license = GPL
license_files =
    LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
zip_safe = True   # use False if you use __file__ in your code.
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy
    scipy
    pandas
    loguru
    requests
    toyplot

[options.entry_points]
console_scripts =
    toytree = toytree.cli.main:main

[options.extras_require]
dev =
    black==22.1.0
    flake8==4.0.1
